--- a/src/presentation/pages/home/styles.scss
+++ b/src/presentation/pages/home/styles.scss
@@ -24,9 +24,7 @@
 }
 .grid {
   display: grid;
-  display: flex;
-  justify-content: space-evenly;
-  grid-gap: 20px;
+  grid-gap: 2rem;
   grid-template-columns: repeat(2, 1fr);
 }
 
